# wordle-tui

./: .gitignore  .play.state.txt  .word-list.cache.txt  Cargo.toml  readme.md
src/: main.rs
