[package]
name = "wordle-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
crossterm = "0.28.1"
ratatui = "0.28.1"
serde = "1.0.210"
serde_json = "1.0.128"
ureq = { version = "2.10.1", features = ["json"] }

[lints.clippy]
all = "warn"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = "warn"
nursery = "warn"

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
nonstandard-style = "warn"
